--- a/shiro.ini
+++ b/shiro.ini
@@ -52,18 +52,18 @@
 #ldapRealm.contextFactory.authenticationMechanism = simple
 
 ldapRealm = org.apache.zeppelin.realm.LdapRealm
-ldapRealm.userDnTemplate = uid={0},ou=people,dc=home,dc=arpa
+ldapRealm.userDnTemplate = uid={0},ou=zepusers,dc=home,dc=arpa
 ldapRealm.searchBase = dc=home,dc=arpa
-ldapRealm.userSearchBase = ou=people,dc=home,dc=arpa
-ldapRealm.groupSearchBase = ou=groups,dc=home,dc=arpa
+ldapRealm.userSearchBase = ou=zepusers,dc=home,dc=arpa
+ldapRealm.groupSearchBase = ou=zepgroups,dc=home,dc=arpa
 ldapRealm.contextFactory.url = ldap://127.0.0.1:389
 ldapRealm.contextFactory.authenticationMechanism = simple
 ldapRealm.userObjectClass = posixAccount
 ldapRealm.groupObjectClass = posixGroup
 ldapRealm.authorizationEnabled = true
 ldapRealm.memberAttribute = memberUid
-ldapRealm.memberAttributeValueTemplate=uid={0},ou=people,dc=home,dc=arpa
-ldapRealm.rolesByGroup = admin:admin,user:user
+ldapRealm.memberAttributeValueTemplate=uid={0},ou=zepusers,dc=home,dc=arpa
+ldapRealm.rolesByGroup = zepadmins:admin,zepusers:user
 ldapRealm.allowedRolesForAuthentication = admin,user
 ldapRealm.userSearchAttributeName = uid
 securityManager.realms = $ldapRealm
